修改部署说明文档